toolchain/internal/core/analysis/testdata/errors/consts/reference_missing_const.vdl
// @expect: E205

const timeout = baseTimeout
